service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-svc
spec:
  selector:
    app: test-app-1
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
