ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  labels:
    name: test-app-ingress
spec:
  rules:
  - host: test-app.aab87c9c-e6e1-4ecd-b7cb-65fedcd51ae7.k8s.civo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test-app-svc
            port: 
              number: 3000
